--- a/src/main/resources/templates/admin/common/frame.html
+++ b/src/main/resources/templates/admin/common/frame.html
@@ -59,7 +59,7 @@
                 </ul>
             </li>
             <li class="submenu">
-                <a href="#"><i class="icon icon-th-list"></i> <span>课程管理</span></a>
+                <a href="#"><i class="icon icon-tint"></i> <span>课程管理</span></a>
                 <ul>
                     <li><a href="#">专业管理</a></li>
                     <li><a href="#">课程管理</a></li>
@@ -69,7 +69,7 @@
                 </ul>
             </li>
             <li class="submenu">
-                <a href="#"><i class="icon icon-th-list"></i> <span>问答管理</span></a>
+                <a href="#"><i class="icon icon-th"></i> <span>问答管理</span></a>
                 <ul>
                     <li><a href="#">问答标签</a></li>
                     <li><a href="#">问答列表</a></li>
@@ -77,14 +77,14 @@
                 </ul>
             </li>
             <li class="submenu">
-                <a href="#"><i class="icon icon-th-list"></i> <span>资讯管理</span></a>
+                <a href="#"><i class="icon icon-file"></i> <span>资讯管理</span></a>
                 <ul>
                     <li><a href="#">添加文章</a></li>
                     <li><a href="#">文章列表</a></li>
                 </ul>
             </li>
             <li class="submenu">
-                <a href="#"><i class="icon icon-th-list"></i> <span>统计管理</span></a>
+                <a href="#"><i class="icon icon-signal"></i> <span>统计管理</span></a>
                 <ul>
                     <li><a href="#">生成统计</a></li>
                     <li><a href="#">学员登录数统计</a></li>
@@ -99,14 +99,14 @@
                 <ul>
                     <li><a href="#">权限树</a></li>
                     <li><a href="#">角色管理</a></li>
-                    <li><a href="#">用户列表</a></li>
+                    <li><a href="/admin/sysuser/userlist">系统用户列表</a></li>
                     <li><a href="#">全站系统消息</a></li>
                     <li><a href="#">批量发送</a></li>
                     <li><a href="#">系统消息列表</a></li>
                 </ul>
             </li>
             <li class="submenu">
-                <a href="#"><i class="icon icon-th-list"></i> <span>邮件/短信管理</span></a>
+                <a href="#"><i class="icon icon-tint"></i> <span>邮件/短信管理</span></a>
                 <ul>
                     <li><a href="#">发送邮件</a></li>
                     <li><a href="#">邮件管理</a></li>
@@ -115,7 +115,7 @@
                 </ul>
             </li>
             <li class="submenu">
-                <a href="#"><i class="icon icon-th-list"></i> <span>站点设置</span></a>
+                <a href="#"><i class="icon icon-pencil"></i> <span>站点设置</span></a>
                 <ul>
                     <li><a href="#">基本配置</a></li>
                     <li><a href="#">导航管理</a></li>
