--- a/src/main/resources/templates/web/questionscomment/questionscomment-ajax-list.html
+++ b/src/main/resources/templates/web/questionscomment/questionscomment-ajax-list.html
@@ -27,7 +27,7 @@
 									<font class="fsize12 c-999 ml5" th:text="${#dates.format(questionsComment.addTime, 'yyyy-MM-dd HH:mm')}"></font>
 								</span>
 								<span class="fl"> <a href="javascript: void(0)" title="回答" class="noter-dy vam"
-										th:onclick="'getCommentById(this,'+${questionsComment.id })">
+										th:onclick="'getCommentById(this,'+${questionsComment.id }+')'">
 										<em class="icon18">&nbsp;</em>全部评论(<span th:text="${questionsComment.replyCount }"></span>)
 									</a> <tt class="noter-zan vam ml10 f-fM" title="赞一下" th:onclick="'addPraise('+${questionsComment.id }+',2,this)'">
 										<em class="icon18">&nbsp;</em>点赞(<span th:text="${questionsComment.praiseCount }"></span>)
@@ -112,7 +112,7 @@
 							</div>
 							<div class="of mt5">
 								<span class="fr"><font class="fsize12 c-999 ml5" th:text="${#dates.format(questionsComment.addTime, 'yyyy-MM-dd HH:mm')}"> <!-- <a href="" class="c-blue mr10">删除</a> -->
-								</font></span> <span class="fl"> <a href="javascript: void(0)" title="回答" class="noter-dy vam" onclick="getCommentById(this,${questionsComment.id})">
+								</font></span> <span class="fl"> <a href="javascript: void(0)" title="回答" class="noter-dy vam" th:onclick="'getCommentById(this,'+${questionsComment.id}+')'">
 										<em class="icon18">&nbsp;</em>(<span th:text="${questionsComment.replyCount }"></span>)
 									</a> <tt class="noter-zan vam ml10" title="赞一下" th:onclick="'addPraise('+${questionsComment.id }+',2,this)'">
 										<em class="icon18">&nbsp;</em>(<span th:text="${questionsComment.praiseCount }"></span>)
