--- a/src/main/resources/templates/admin/system/system_user_list.html
+++ b/src/main/resources/templates/admin/system/system_user_list.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
+<script th:src="@{/admin/css/system/systemuser.css}" type="text/javascript" ></script>
+<script th:src="@{/admin/js/system/sys-user.js}" type="text/javascript" ></script>
+<script th:src="@{/admin/js/system/sys-function.js}" type="text/javascript" ></script>
+<script th:src="@{/admin/js/system/sys-role.js}" type="text/javascript" ></script>
 
 <div th:replace="/admin/common/frame::header"></div>
 
@@ -12,18 +16,22 @@
 <div id="content">
     <div th:replace="/admin/common/frame::manage"></div>
     <div th:replace="/admin/common/frame::nav"></div>
+
     <div class="container-fluid">
-        <div class="tab-list">
-            <div class="td-list">
-                <button class="btn btn-primary pull-left">创建用户</button>
+        <form action="/admin/sysuser/userlist" method="post" id="searchForm">
+            <input type="hidden" id="pageCurrentPage" name="page.currentPage" value="1" />
+            <div class="tab-list">
+                <div class="td-list">
+                    <button class="btn btn-primary pull-left" data-toggle="modal" data-target="#createUser">创建用户</button>
+                </div>
+                <div class="td-list">
+                    <input type="text" style="width: 200px" name="querySysUser.keyWord" th:value="${querySysUser.keyWord}" placeholder="用户名/E_MAIL"/>
+                </div>
+                <div class="td-list">
+                    <button type="submit" onclick="searchUser()" class="btn btn-primary pull-right">查询</button>
+                </div>
             </div>
-            <div class="td-list">
-                <input type="text" style="width: 200px" placeholder="用户名/E_MAIL"/>
-            </div>
-            <div class="td-list">
-                <button type="submit" class="btn btn-primary pull-right">查询</button>
-            </div>
-        </div>
+        <form>
         <div class="row-fluid">
             <div class="span12">
                 <div class="widget-box">
@@ -44,7 +52,7 @@
                             </thead>
                             <tbody>
 
-                            <th:block th:each="sysuser:${userList}">
+                            <samp th:each="sysuser:${userList}">
                                 <tr class="gradeX">
                                     <td th:text="${sysuser.loginName}"></td>
                                     <td th:if="${sysuser.loginName ne null and sysuser.loginName ne ''}" th:text="${sysuser.userName}"></td><td th:if="${sysuser.loginName eq null or sysuser.loginName eq ''}">--</td>
@@ -52,20 +60,21 @@
                                     <td th:if="${sysuser.tel!=null && sysuser.tel!=''}" th:text=" ${sysuser.tel}"></td><td th:unless="${sysuser.tel!=null && sysuser.tel!=''}">--</td>
                                     <td th:text="${#dates.format(sysuser.createTime, 'yyyy/MM/dd HH:mm')}"></td>
                                     <td th:if="${sysuser.lastLoginTime!=null}" th:text="${#dates.format(sysuser.lastLoginTime, 'yyyy/MM/dd HH:mm')}"></td><td th:unless="${sysuser.lastLoginTime!=null}">--</td>
-                                    <td th:if="${sysuser.lastLoginIp!=null && sysuser.lastLoginIp!=''}" th:text=" ${sysuser.tel}"></td><td th:unless="${sysuser.lastLoginIp!=null && sysuser.lastLoginIp!=''}">--</td>
+                                    <td th:if="${sysuser.lastLoginIp!=null && sysuser.lastLoginIp!=''}" th:text=" ${sysuser.lastLoginIp}"></td><td th:unless="${sysuser.lastLoginIp!=null && sysuser.lastLoginIp!=''}">--</td>
                                     <th:block th:switch="${sysuser.status}">
                                         <td th:case="0">正常</td>
                                         <td th:case="1">冻结</td>
                                     </th:block>
                                     <td>
-                                        <th:block th:switch="${sysuser.status}">
-                                            <button th:case="0" th:onclick="'disableOrstart('+${sysuser.userId}+',2,this)'">冻结</button>
-                                            <button th:case="1" th:onclick="'disableOrstart('+${sysuser.userId}+',1,this)'">启用</button>
-                                        </th:block>
-                                        <button onclick="initUser(${sysuser.userId})"  type="button">修改</button>
-                                        <button href="javascript:void(0)" onclick="updatePwd(${sysuser.userId})">修改密码</button>
-                                        <button href="javascript:void(0)" onclick="delUser(${sysuser.userId})">删除用户</button>
-                                        <button th:href="'/admin/sysuser/looklog/'+${sysuser.userId}">查看日志</button>
+                                        <samp th:switch="${sysuser.status}">
+                                            <span th:case="0" th:onclick="'disableOrstart('+${sysuser.userId}+',2,this)'">冻结</span>
+                                            <span th:case="1" th:onclick="'disableOrstart('+${sysuser.userId}+',1,this)'">启用</span>
+                                        </samp>
+                                        |
+                                        <span onclick="initUser(${sysuser.userId})"  type="button">修改</span>|
+                                        <span href="javascript:void(0)" onclick="updatePwd(${sysuser.userId})">修改密码</span>|
+                                        <span href="javascript:void(0)" onclick="delUser(${sysuser.userId})">删除用户</span>|
+                                        <span th:href="'/admin/sysuser/looklog/'+${sysuser.userId}">查看日志</span>
                                     </td>
                                 </tr>
                             </th:block>
@@ -76,3 +85,35 @@
              </div>
         </div>
 </body>
+
+<div class="modal fade" id="createUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+    <form id="sysUserForm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
+                <h4 class="modal-title" id="myModalLabel">创建新用户 </h4>
+            </div>
+            <div class="modal-body">
+                <div id="approval">
+                    <label class="form-label">登录名</label><input class="form-control" name="sysUser.loginName" id="loginName" type="text" /><br/>
+                    <label class="form-label">密码</label><input class="form-control" name="sysUser.loginPwd" id="loginPwd" type="password" /><br/>
+                    <label class="form-label">确认密码</label><input class="form-control" id="confirmPwd" type="password" /><br/>
+                    <label class="form-label">姓名</label><input class="form-control" name="sysUser.userName" id="userName" type="text" /><br/>
+                    <label class="form-label">邮箱</label><input class="form-control" name="sysUser.email" id="email" type="text" /><br/>
+                    <label class="form-label">电话</label><input class="form-control" name="sysUser.tel" id="tel" type="text" /><br/>
+                    <label class="form-label">所属角色</label>
+                    <select name="sysUser.roleId" class="form-control">
+                        <option value="0">请选择</option>
+                        <option th:each="role:${sysRoleList}" th:value="${role.roleId}" th:text="${role.roleName}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消 </button>
+                <button type="button" class="btn btn-primary" onclick="createSysUser()" >确认</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </form>
+    </div>
+</div>
