--- a/src/main/resources/templates/web/usercenter/favourite_course_list.html
+++ b/src/main/resources/templates/web/usercenter/favourite_course_list.html
@@ -40,10 +40,11 @@
                                             <dt>
                                                 <section class="tar">
                                                     <p class="hLh30">
-                                                        <b class="fsize14 f-fA c-red"><fmt:formatDate type="both" value="${favorite.addTime }" pattern="yyyy年" /></b>
+                                                        <b class="fsize14 f-fA c-red" th:text="${#dates.format(favorite.addTime, 'yyyy年')}">
+                                                            <fmt:formatDate type="both" value="${favorite.addTime }" pattern="yyyy年" /></b>
                                                     </p>
                                                     <p class="hLh20">
-                                                        <span class="f-fA c-666"><fmt:formatDate type="both" value="${favorite.addTime }" pattern="MM月dd日 HH:mm" /></span>
+                                                        <span class="f-fA c-666" th:text="${#dates.format(favorite.addTime, 'MM月dd日 HH:mm')}"></span>
                                                     </p>
                                                     <p class="hLh20">
                                                         <span class="f-fA c-999">收藏</span>
@@ -57,13 +58,13 @@
                                                             <label class="hand"><input type="checkbox" style="vertical-align: -2px;" name="favouriteId" th:value="${favorite.favouriteId}"></label> <br>
                                                             <a th:href="'/web/usercenter/deleteFaveorite/'+${favorite.favouriteId}" title="" class="c-blue">取消收藏</a>
                                                         </div>
-                                                        <a th:href="'/front/couinfo/'+${favorite.courseId }" title="">
+                                                        <a th:href="'/web/course/detail/'+${favorite.courseId }" title="">
                                                             <img th:if="${favorite.logo ne empty}" th:src="${favorite.logo}" width="120" alt="">
                                                             <img th:unless="${favorite.logo ne empty}"  src="/web/img/default-img.gif" width="120" alt="">
                                                         </a>
                                                     </div>
                                                     <div class="hLh30 txtOf">
-                                                        <a th:href="'/front/couinfo/'+${favorite.courseId }" class="c-666 fsize14" th:text="${favorite.courseName }"></a>
+                                                        <a th:href="'/web/course/detail/'+${favorite.courseId }" class="c-666 fsize14" th:text="${favorite.courseName }"></a>
                                                     </div>
                                                 </section>
                                             </dd>
