--- a/src/main/resources/templates/web/usercenter/free_course.html
+++ b/src/main/resources/templates/web/usercenter/free_course.html
@@ -47,11 +47,11 @@
                                                                     <img src="/static/inxweb/img/default-img.gif" class="img-responsive" th:alt="${course.courseName}" />
                                                                 </th:block>
                                                                 <div class="cc-mask">
-                                                                    <a th:href="'/usercenter/play/'+${course.courseId}" title="" class="comm-btn c-btn-1">继续学习</a>
+                                                                    <a th:href="'/web/usercenter/play/'+${course.courseId}" title="" class="comm-btn c-btn-1">继续学习</a>
                                                                 </div>
                                                             </section>
                                                             <h3 class="hLh30 txtOf mt10">
-                                                                <a th;href="'/usercenter/play/'+${course.courseId}" th:title="${course.courseName}" class="course-title fsize18 c-333" th:text="${course.courseName}"></a>
+                                                                <a th:href="'/web/usercenter/play/'+${course.courseId}" th:title="${course.courseName}" class="course-title fsize18 c-333" th:text="${course.courseName}"></a>
                                                             </h3>
                                                             <section class="mt10 of">
                                                                 <div class="time-bar-wrap">
@@ -75,7 +75,6 @@
                                                 </ul>
                                             </article>
                                             <!-- 公共分页 开始 -->
-                                            <jsp:include page="/WEB-INF/view/common/front_page.jsp" />
                                             <!-- 公共分页 结束 -->
                                             <form method="post" id="searchForm" action="/usercenter/freeCourseList">
                                                 <input type="hidden" id="pageCurrentPage" name="page.currentPage" value="1" />
