--- a/src/main/resources/templates/web/usercenter/player_video.html
+++ b/src/main/resources/templates/web/usercenter/player_video.html
@@ -1,6 +1,5 @@
-﻿﻿<%@ page contentType="text/html;charset=UTF-8" language="java" pageEncoding="UTF-8"%>
-<%@ include file="/base.jsp"%>
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <!--[if lt IE 7]>      <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
@@ -9,16 +8,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>播放大厅-${websitemap.web.company}-${websitemap.web.title}</title>
+<title>播放大厅</title>
 <meta name="author" content="${websitemap.web.author}" />
 <meta name="keywords" content="${websitemap.web.keywords}" />
 <meta name="description" content="${websitemap.web.description}" />
 <link rel="shortcut icon" href="${ctx}/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="${ctx}/static/inxweb/css/reset.css">
-<link rel="stylesheet" type="text/css" href="${ctx}/static/inxweb/css/theme.css">
-<link rel="stylesheet" type="text/css" href="${ctx}/static/inxweb/css/global.css">
-<link rel="stylesheet" type="text/css" href="${ctx}/static/inxweb/css/web.css">
-<link href="${ctx}/static/inxweb/css/mw_320_768.css" rel="stylesheet" type="text/css" media="screen and (min-width: 320px) and (max-width: 768px)">
+<link rel="stylesheet" type="text/css" th:href="@{/web/css/reset.css}" >
+<link rel="stylesheet" type="text/css" th:href="@{/web/css/theme.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/web/css/global.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/web/css/web.css}">
+<link th:href="@{/web/css/mw_320_768.css}" rel="stylesheet" type="text/css" media="screen and (min-width: 320px) and (max-width: 768px)">
 <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
 <script src="http://vod.baofengcloud.com/html/script/bfcloud.js?v=2"></script>
 </head>
@@ -35,7 +34,7 @@
 						<aside class="p-h-goback">
 							<a href="javascript:void(0)" onclick="history.go(-1)" title=""><em class="icon24">&nbsp;</em><tt class="c-fff fsize14 f-fM vam">返回</tt></a>
 						</aside>
-						<h2 class="p-h-title"><span class="c-fff" id="contentTitle">${course.courseName }</span></h2>
+						<h2 class="p-h-title"><span class="c-fff" id="contentTitle" th:text="${course.courseName }"></span></h2>
 						<aside class="pa" style="right: 40px;top: 22px;">
 							<span class="vam dpBtn"><em class="icon18 dpIcon"></em><a class="c-fff vam" title="关灯" onclick="" href="javascript:void(0)">关灯</a></span>
 						</aside>
@@ -59,7 +58,7 @@
 							<!-- <script src='http://p.bokecc.com/player?vid=28410965A68FCF5B9C33DC5901307461&siteid=F9C3434C51509878&autoStart=true&width=100%&height=100%&playerid=51A2AD3118ACAD37&playertype=1' type='text/javascript'></script> -->
 						</section>
 						<section class="p-h-video-tip">
-							<img src="${ctx }/static/inxweb/img/v-loading.gif">
+							<img src="/web/img/v-loading.gif">
 							<p class="hLh20"><span style="color: #A6B8CC;">加载中...</span></p>
 						</section>
 					</div>
@@ -72,15 +71,19 @@
 									<section class="kcShare pr fl hand vam">
 										<tt><em class="icon18 shareIcon"></em><span class="vam c-fff f-fM">分享</span></tt>
 										<div id="bdshare" class="bdsharebuttonbox"><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_douban" data-cmd="douban" title="分享到豆瓣网"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a></div>
-										<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+										<script th:inline="javascript">
+                                            /*<![CDATA[*/
+											window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js'];</script>
+										/*]]>*/
 									</section>
-									<c:if test="${isFavorites==true }">
-										<span class="ml10 vam sc-end"><em class="icon18 scIcon"></em><a class="c-fff vam" title="已收藏" onclick="" href="javascript:void(0)">已收藏</a></span>
-									</c:if>
-									<c:if test="${isFavorites==false }">
-										<span class="ml10 vam"><em class="icon18 scIcon"></em><a class="c-fff vam" title="收藏" onclick="favorites(${course.courseId},this)" href="javascript:void(0)">收藏</a></span>
-									</c:if>
-									
+										<span class="ml10 vam sc-end" th:if="${isFavorites==true }">
+											<em class="icon18 scIcon"></em>
+											<a class="c-fff vam" title="已收藏" onclick="" href="javascript:void(0)">已收藏</a>
+										</span>
+										<span class="ml10 vam" th:if="${isFavorites==false }">
+											<em class="icon18 scIcon"></em>
+											<a class="c-fff vam" title="收藏" th:onclick="'favorites('+${course.courseId}+',this)'" href="javascript:void(0)">收藏</a></span>
+
 									
 								</aside>
 							</section>
@@ -143,50 +146,37 @@
 						<section class="c-infor-tabTitle c-tab-title">
 							<a title="" href="">猜你想学</a>
 						</section>
-						<c:if test="${empty courseList}">
-							<section class="no-data-wrap">
+							<section class="no-data-wrap" th:if="${courseList==null}">
 								<em class="icon30 no-data-ico">&nbsp;</em>
 								<span class="c-666 fsize14 ml10 vam">没有相关数据，小编正在努力整理中...</span>
 							</section>
-						</c:if>
-						<c:if test="${not empty courseList}">
-								<section class="course-r-list">
+								<section class="course-r-list" th:if="${courseList!=null}">
 									<ol>
-										<c:forEach items="${courseList}" var="interfixCourse">
-											<li>
+											<li th:each="interfixCourse:${courseList}">
 												<aside class="course-r-pic">
-													<a href="${ctx }/front/couinfo/${interfixCourse.courseId}" title="">
-														<c:choose>
-															<c:when test="${interfixCourse.logo!=null && interfixCourse.logo!=''}">
-																<img alt="" src="<%=staticImage%>${interfixCourse.logo}" />
-															</c:when>
-															<c:otherwise>
-																<img alt="" src="${ctx }/static/inxweb/img/default-img.gif" />
-															</c:otherwise>
-														</c:choose>
+													<a th:href="'/web/course/detail/'+${interfixCourse.courseId}" title="">
+																<img th:if="${interfixCourse.logo!=null and interfixCourse.logo!=''}" alt="" th:src="${interfixCourse.logo}" />
+																<img alt="" th:if="${interfixCourse.logo==null or interfixCourse.logo==''}" src="/web/img/default-img.gif" />
 													</a>
 												</aside>
 												<section class="hLh20 txtOf">
-													<a href="${ctx }/front/couinfo/${interfixCourse.courseId}" class="c-333 fsize16">${interfixCourse.courseName}</a>
+													<a th:href="'/web/course/detail/'+${interfixCourse.courseId}" class="c-333 fsize16" th:text="${interfixCourse.courseName}"></a>
 												</section>
 												<section class="hLh20 mt5 txtOf">
 													<span class="c-999">讲师：
-														<c:if test="${interfixCourse.teacherList!=null && interfixCourse.teacherList.size()>0}">
-																<c:forEach items="${interfixCourse.teacherList}" var="teacher">
-																	${teacher.name}&nbsp;&nbsp;
-																</c:forEach>
-															</c:if>
+														<th:block th:each="teacher:${interfixCourse.teacherList}" th:text="${teacher.name}+'&nbsp;&nbsp;'" th:if="${interfixCourse.teacherList!=null and interfixCourse.teacherList.size()>0}">
+
+
+														</th:block>
 													</span>
 												</section>
 												<section class="hLh20 txtOf">
-													<span class="c-master">${interfixCourse.pageBuycount }人</span>
+													<span class="c-master" th:text="${interfixCourse.pageBuycount }+'人'"></span>
 												</section>
 											</li>
-										</c:forEach>
-										
+
 									</ol>
 								</section>
-							</c:if>
 					</div>
 				</div>
 				<div class="i-box mt20">
@@ -206,35 +196,35 @@
 	
 
 	<!-- 公共底引入 -->
-	<jsp:include page="/WEB-INF/layouts/web/footer.jsp" />
-	<!-- 公共底引入 -->
-	<script type="text/javascript" src="${ctx}/static/common/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="${ctx}/static/common/jquery-1.11.1.min.js"></script>
 
-	<script type="text/javascript" src="${ctx}/static/common/webutils.js"></script>
-	<script type="text/javascript" src="${ctx }/static/inxweb/js/common.js" ></script>
-	<script src="/static/inxweb/comment/comment.js" type="text/javascript"></script><!-- 评论js -->
-	<script type="text/javascript" src="${ctx }/kindeditor/kindeditor-all.js"></script>
-	<script type="text/javascript" src="${ctx}/static/inxweb/play/playVideo.js"></script>
-	
-	<script>
+	<!-- 公共底引入 -->
+	<script th:src="@{/common/js/jquery-1.7.2.min.js}" type="text/javascript"></script>
+<script type="text/javascript" th:src="@{/common/js/jquery-1.11.1.min.js}"></script>
+	<script type="text/javascript" th:src="@{/web/js/common/webutils.js}"></script>
+	<script type="text/javascript" th:src="@{/web/js/common/common.js}"></script>
+	<script type="text/javascript" th:src="@{/web/js/front/comment.js}"></script>
+	<script th:src="@{/kindeditor/kindeditor-all.js}" type="text/javascript" ></script>
+	<script type="text/javascript" th:src="@{/web/js/front/playVideo.js}"></script>
+
+	<script th:inline="javascript" >
+        /*<![CDATA[*/
 	//评论课程id
-	var otherId = '${course.courseId}';
+	var otherId = [[${course.courseId}]];
 	//评论类型,类型2为课程
 	var type = 2;
 	var currentKpointId="0";//当前播放视频id(没有视频节点默认为零)
-	var isok="${isok}";//是否可以播放
-	var message="${message}";//提示信息
+	var isok=[[${isok}]];//是否可以播放
+	var message=[[${message}]];//提示信息
 	var countPlayTimeOut='15';//播放后记录播放次数的延时
-	var studyPercent="${course.studyPercent}";//学习进度百分比
+	var studyPercent=[[${course.studyPercent}]];//学习进度百分
 
-	getCourseKpointList("${course.courseId}",2);
+	getCourseKpointList([[${course.courseId}]],2);
 	/**
 	 * 获得课程章节目录
 	 */
 	function getCourseKpointList(courseId,type) {
 		$.ajax({
-			url : baselocation + "/front/ajax/courseKpointList/"+courseId+"/"+type,
+			url : baselocation + "/web/ajax/courseKpointList/"+courseId+"/"+type,
 			data:{},
 			type : 'post',
 			dataType : 'text',
@@ -260,9 +250,10 @@
 			$(".courseKpointHtml").prev().hide();
 			$(".courseKpointHtml").show();
 		}else{
-			getCourseKpointList("${course.courseId}",2);
+			getCourseKpointList([[${course.courseId}]],2);
 		}
 	}
+        /*]]>*/
 	</script>
 </body>
 </html>
